definitely enabled compilation on java 7